gcc-9 (9.2.1-32) UNRELEASED; urgency=medium

  * 

 -- Matthias Klose <doko@debian.org>  Fri, 06 Mar 2020 21:06:05 +0100

gcc-9 (9.2.1-31) unstable; urgency=medium

  * GCC 9.3.0 release candidate.
  * Update to git 20200304 from the gcc-9 branch.
    - Fix PR c/93949, PR tree-optimization/93945, PR target/91276 (PPC),
      PR c++/92003, PR target/93047 (PPC), PR tree-optimization/93820,
      PR rtl-optimization/93908, PR tree-optimization/93767, PR c++/92745,
      PR c++/90951, PR c++/93140, PR c++/92852, PR libstdc++/93205,
      PR libstdc++/92886, PR libstdc++/93325, PR libstdc++/93562,
      PR libstdc++/92376, PR libstdc++/78552, PR rtl-optimization/94002,
      PR c++/92601,i PR other/93965, PR c++/86917, PR c++/91953,
      PR c++/88256, PR c++/93442, PR c++/90732, PR c++/90333, PR c++/89640,
      PR c++/60503, PR libbacktrace/91908, PR lto/93966,
      PR target/94046 (x86), PR target/90311 (ARM), PR sanitizer/93436,
      PR c++/88395, PR c++/93551, PR gcov-profile/93753, PR c++/90338,
      PR c++/91607, PR c++/90938, PR c++/93299, PR c++/93676, PR c++/90505,
      PR c++/90432, PR c++/90997, PR fortran/92976, PR libstdc++/94069,
      PR libstdc++/91910, PR libstdc++/93470, PR libstdc++/93325.
    - Revert PR target/93658 (PPC), PR target/93568 (PPC).

 -- Matthias Klose <doko@ubuntu.com>  Fri, 06 Mar 2020 20:20:03 +0100

gcc-9 (9.2.1-30) unstable; urgency=medium

  * Update to git 20200224 from the gcc-9 branch.
    - Fix PR target/93658 (PPC), PR target/93568 (PPC), PR target/93828 (x86),
      PR target/93656 (x86).
  * Don't create doc directories for -dbg packages when not building those.
  * Fix PR rtl-optimization/93272, taken from the trunk. LP: #1862342.

 -- Matthias Klose <doko@debian.org>  Mon, 24 Feb 2020 20:10:08 +0100

gcc-9 (9.2.1-29) unstable; urgency=medium

  * Update to git 20200220 from the gcc-9 branch.
    - Fix PR middle-end/92768, PR middle-end/90313, PR tree-optimization/93434,