@@ -142,7 +142,7 @@ define __do_libgo
 	$(call cross_mangle_shlibs,$(p_l))
 	$(ignshld)DIRNAME=$(subst n,,$(2)) $(cross_shlibdeps) dh_shlibdeps -p$(p_l) \
 		$(call shlibdirs_to_search, \
-			$(subst go$(GO_SONAME),gcc$(GCC_SONAME),$(p_l)) \
+			$(subst go$(GO_SONAME),$(libgcc_basename)$(GCC_SONAME),$(p_l)) \
 			$(subst go$(GO_SONAME),atomic$(ATOMIC_SONAME),$(p_l)) \
 		,$(2)) \
 		$(if $(filter yes, $(with_common_libs)),,-- -Ldebian/shlibs.common$(2))
