@@ -219,7 +219,7 @@ define __do_libstdcxx
 
 	$(call cross_mangle_shlibs,$(p_l))
 	$(ignshld)DIRNAME=$(subst n,,$(2)) $(cross_shlibdeps) dh_shlibdeps -p$(p_l) \
-		$(call shlibdirs_to_search,$(subst stdc++$(CXX_SONAME),gcc$(GCC_SONAME),$(p_l)),$(2)) \
+		$(call shlibdirs_to_search,$(subst stdc++$(CXX_SONAME),$(libgcc_basename)$(GCC_SONAME),$(p_l)),$(2)) \
 		$(if $(filter yes, $(with_common_libs)),,-- -Ldebian/shlibs.common$(2))
 	$(call cross_mangle_substvars,$(p_l))
 	echo $(p_l) >> debian/$(lib_binaries)
@@ -258,7 +258,7 @@ define __do_libstdcxx_dbg
 	)
 
 	$(ignshld)DIRNAME=$(subst n,,$(2)) $(cross_shlibdeps) dh_shlibdeps -p$(p_d) \
-		$(call shlibdirs_to_search,$(subst $(pkg_ver),,$(subst stdc++$(CXX_SONAME),gcc$(GCC_SONAME),$(p_l))),$(2)) \
+		$(call shlibdirs_to_search,$(subst $(pkg_ver),,$(subst stdc++$(CXX_SONAME),$(libgcc_basename)$(GCC_SONAME),$(p_l))),$(2)) \
 		$(if $(filter yes, $(with_common_libs)),,-- -Ldebian/shlibs.common$(2))
 	$(call cross_mangle_substvars,$(p_d))
 
@@ -291,7 +291,7 @@ define __do_libstdcxx_dev
 	debian/dh_rmemptydirs -p$(p_l)
 	dh_strip -p$(p_l)
 	dh_shlibdeps -p$(p_l) \
-		$(call shlibdirs_to_search,$(subst stdc++$(CXX_SONAME),gcc$(GCC_SONAME),$(p_l)),$(2))
+		$(call shlibdirs_to_search,$(subst stdc++$(CXX_SONAME),$(libgcc_basename)$(GCC_SONAME),$(p_l)),$(2))
 	echo $(p_l) >> debian/$(lib_binaries)
 
 	trap '' 1 2 3 15; touch $@; mv $(install_stamp)-tmp $(install_stamp)
