@@ -1946,6 +1946,13 @@ ifeq (,$(p_lib))
   p_lib = libstdc++$(CXX_SONAME)$(cross_lib_arch)
 endif
 
+# with a newer GCC present, depend on libgcc-sN instead of libgccN
+ifeq ($(with_common_libs),yes)
+  libgcc_basename = gcc
+else
+  libgcc_basename = gcc-s
+fi
+
 d	= debian/tmp
 d_base	= debian/$(p_base)
 d_xbase = debian/$(p_xbase)
