@@ -1,6 +1,7 @@
 gcc-9 (9.2.1-32) UNRELEASED; urgency=medium
 
-  * 
+  * For all runtime libraries, generate dependencies on libgcc-sN instead 
+    on libgccN.
 
  -- Matthias Klose <doko@debian.org>  Fri, 06 Mar 2020 21:06:05 +0100
 
